// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler sfc: transform asset url > should allow for full base URLs, with paths 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<img src=http://localhost:3000/src/logo.png>", true, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler sfc: transform asset url > should allow for full base URLs, without paths 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<img src=http://localhost:3000/logo.png>", true, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler sfc: transform asset url > should allow for full base URLs, without port 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<img src=http://localhost/logo.png>", true, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler sfc: transform asset url > should allow for full base URLs, without protocol 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<img src=//localhost/logo.png>", true, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler sfc: transform asset url > support uri fragment 1`] = `
"import { template as _template } from 'vue';
import _imports_0 from '@svg/file.svg';
const t0 = _template("<use href=\\"" + _imports_0 + '#fragment' + "\\">", false, true, 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const n1 = t0()
  return [n0, n1]
}"
`;

exports[`compiler sfc: transform asset url > support uri is empty 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<use href>", true, true, 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler sfc: transform asset url > transform assetUrls 1`] = `
"import { template as _template } from 'vue';
import _imports_0 from './logo.png';
import _imports_1 from 'fixtures/logo.png';
import _imports_2 from '/fixtures/logo.png';
const t0 = _template("<img src=\\"" + _imports_0 + "\\">", false, true)
const t1 = _template("<img src=\\"" + _imports_1 + "\\">", false, true)
const t2 = _template("<img src=http://example.com/fixtures/logo.png>", false, true)
const t3 = _template("<img src=//example.com/fixtures/logo.png>", false, true)
const t4 = _template("<img src=\\"" + _imports_2 + "\\">", false, true)
const t5 = _template("<img src=data:image/png;base64,i>", false, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const n1 = t1()
  const n2 = t1()
  const n3 = t2()
  const n4 = t3()
  const n5 = t4()
  const n6 = t5()
  return [n0, n1, n2, n3, n4, n5, n6]
}"
`;

exports[`compiler sfc: transform asset url > transform with stringify 1`] = `
"import { template as _template } from 'vue';
import _imports_0 from './bar.png';
import _imports_1 from '/bar.png';
const t0 = _template("<div><img src=\\"" + _imports_0 + "\\"><img src=\\"" + _imports_1 + "\\"><img src=https://foo.bar/baz.png><img src=//foo.bar/baz.png><img src=\\"" + _imports_0 + "\\">", true, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler sfc: transform asset url > with explicit base 1`] = `
"import { template as _template } from 'vue';
import _imports_0 from 'bar.png';
import _imports_1 from '@theme/bar.png';
const t0 = _template("<img src=/foo/bar.png>", false, true)
const t1 = _template("<img src=\\"" + _imports_0 + "\\">", false, true)
const t2 = _template("<img src=\\"" + _imports_1 + "\\">", false, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const n1 = t1()
  const n2 = t1()
  const n3 = t2()
  return [n0, n1, n2, n3]
}"
`;

exports[`compiler sfc: transform asset url > with includeAbsolute: true 1`] = `
"import { template as _template } from 'vue';
import _imports_0 from './bar.png';
import _imports_1 from '/bar.png';
const t0 = _template("<img src=\\"" + _imports_0 + "\\">", false, true)
const t1 = _template("<img src=\\"" + _imports_1 + "\\">", false, true)
const t2 = _template("<img src=https://foo.bar/baz.png>", false, true)
const t3 = _template("<img src=//foo.bar/baz.png>", false, true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const n1 = t1()
  const n2 = t2()
  const n3 = t3()
  return [n0, n1, n2, n3]
}"
`;
